RESOLVED FIXED57169
REGRESSION (r80582): Angle bracket rendered upright in vertical mode
https://bugs.webkit.org/show_bug.cgi?id=57169
Summary REGRESSION (r80582): Angle bracket rendered upright in vertical mode
mitz
Reported 2011-03-26 15:10:19 PDT
REGRESSION (r80582): Angle bracket rendered upright in vertical mode
Attachments
Actually use a font with vertical glyphs instead of proceeding with fallback (50.05 KB, patch)
2011-03-26 15:16 PDT, mitz
mjs: review+
mitz
Comment 1 2011-03-26 15:14:18 PDT
mitz
Comment 2 2011-03-26 15:16:02 PDT
Created attachment 87049 [details] Actually use a font with vertical glyphs instead of proceeding with fallback
Maciej Stachowiak
Comment 3 2011-03-26 18:25:19 PDT
Comment on attachment 87049 [details] Actually use a font with vertical glyphs instead of proceeding with fallback r=me
mitz
Comment 4 2011-03-26 18:39:28 PDT
WebKit Review Bot
Comment 5 2011-03-26 21:24:11 PDT
http://trac.webkit.org/changeset/82056 might have broken GTK Linux 32-bit Debug
Note You need to log in before you can comment on or make changes to this bug.