<rdar://problem/9180716> REGRESSION (r80582): Angle bracket rendered upright in vertical mode https://bugs.webkit.org/show_bug.cgi?id=57169

Reviewed by Maciej Stachowiak.

Source/WebCore:

Test: fast/blockflow/fallback-orientation.html

* platform/graphics/FontFastPath.cpp:
(WebCore::Font::glyphDataForCharacter): If the font has vertical glyphs, use it, rather
than continuing down the fallback list.

LayoutTests:

* fast/blockflow/fallback-orientation.html: Added.
* platform/mac/fast/blockflow/fallback-orientation-expected.checksum: Added.
* platform/mac/fast/blockflow/fallback-orientation-expected.png: Added.
* platform/mac/fast/blockflow/fallback-orientation-expected.txt: Added.



Canonical link: https://commits.webkit.org/71861@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82056 268f45cc-cd09-0410-ab3c-d52691b4dbfc